--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAP6uTYASqDUEFuQFZFM5j",
+      "authorship_tag": "ABX9TyOX1uuzEv0zNYqqvXLfER8d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -843,54 +843,51 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "88292474-750e-4636-e707-51c17831d2ea"
+        "outputId": "9b444b18-951c-4433-b366-4bd607c41458"
       },
       "source": [
-        "l=[]\n",
+        "conc=()\n",
         "for i in range(int(input(\"enter the no of students      \"))):\n",
         "  print()\n",
         "  name=input(\"enter the name of student no     \")\n",
         "  age=input(\"enter the age       \")\n",
         "  adress=input(\"enter the  adress      \" )\n",
-        "  college=input(\"enter the college     \")\n",
+        "  college=input(\"enter the fdgdllege     \")\n",
         "  print()\n",
         "  t=name,age,adress,college\n",
         "  print(t)\n",
-        "  l.append(t)\n",
-        "conc=()\n",
-        "for i in l:\n",
-        "  conc+=i\n",
+        "  conc+=t\n",
         "print()  \n",
         "print(conc)\n"
       ],
-      "execution_count": 15,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "enter the no of students      3\n",
             "\n",
-            "enter the name of student no     fdfgd\n",
-            "enter the age       ddfsdf\n",
-            "enter the  adress      gdfg\n",
-            "enter the college     dgdsfg\n",
+            "enter the name of student no     fgdfdg\n",
+            "enter the age       dfdgdfg\n",
+            "enter the  adress      ddgdfg\n",
+            "enter the college     dfgdfgd\n",
             "\n",
-            "('fdfgd', 'ddfsdf', 'gdfg', 'dgdsfg')\n",
+            "('fgdfdg', 'dfdgdfg', 'ddgdfg', 'dfgdfgd')\n",
             "\n",
-            "enter the name of student no     sdfasf\n",
-            "enter the age       dfgdsfg\n",
-            "enter the  adress      asfasfd\n",
-            "enter the college     sadfasdfsa\n",
+            "enter the name of student no     dfgdf\n",
+            "enter the age       dfgdfgdfg\n",
+            "enter the  adress      dfgdfgdg\n",
+            "enter the college     dfgdfgdfg\n",
             "\n",
-            "('sdfasf', 'dfgdsfg', 'asfasfd', 'sadfasdfsa')\n",
+            "('dfgdf', 'dfgdfgdfg', 'dfgdfgdg', 'dfgdfgdfg')\n",
             "\n",
-            "enter the name of student no     sdfsaf\n",
-            "enter the age       asdfasfdsa\n",
-            "enter the  adress      asfasdfasdf\n",
-            "enter the college     dsfgdsfgds\n",
+            "enter the name of student no     fgdfgdf\n",
+            "enter the age       dfgdfgd\n",
+            "enter the  adress      dgdgdfg\n",
+            "enter the college     dfgdfg\n",
             "\n",
-            "('sdfsaf', 'asdfasfdsa', 'asfasdfasdf', 'dsfgdsfgds')\n",
-            "('fdfgd', 'ddfsdf', 'gdfg', 'dgdsfg', 'sdfasf', 'dfgdsfg', 'asfasfd', 'sadfasdfsa', 'sdfsaf', 'asdfasfdsa', 'asfasdfasdf', 'dsfgdsfgds')\n"
+            "('fgdfgdf', 'dfgdfgd', 'dgdgdfg', 'dfgdfg')\n",
+            "('fgdfdg', 'dfdgdfg', 'ddgdfg', 'dfgdfgd', 'dfgdf', 'dfgdfgdfg', 'dfgdfgdg', 'dfgdfgdfg', 'fgdfgdf', 'dfgdfgd', 'dgdgdfg', 'dfgdfg')\n"
           ],
           "name": "stdout"
         }
