--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOX1uuzEv0zNYqqvXLfER8d",
+      "authorship_tag": "ABX9TyNix/A49jQb4ePZxr7uNykf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -962,13 +962,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zLtdtzlBt87u"
+        "id": "zLtdtzlBt87u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4def33a8-0381-4dc7-9607-84fc101adf78"
       },
       "source": [
-        ""
+        "strn = \"hello world\"\n",
+        "def is_vow(n):\n",
+        "  return n in ['a','e','i','o','u']\n",
+        "result = len(list(filter(lambda x: x,list(map(is_vow,list(strn))))))\n",
+        "print(result)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1188,19 +1204,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8229f647-cfd1-4e3e-fa9b-d43896c955e1"
+        "outputId": "56f63b6c-a23f-411c-f525-daab31580e0c"
       },
       "source": [
         "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
-        "l=dicc.keys()\n",
-        "print(l)"
+        "print(sum(dicc.keys()))\n",
+        "print(sum(dicc.values()))"
       ],
-      "execution_count": 62,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "dict_keys([1, 2, 3, 4, 5])\n"
+            "15\n",
+            "55\n"
           ],
           "name": "stdout"
         }
@@ -1409,13 +1426,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_aylnKz6vlVL"
+        "id": "_aylnKz6vlVL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a8faac3-a697-436d-cc13-d016ffe9424c"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['d', 'd', 'd']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1429,13 +1458,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JOePvSWQvlqh"
+        "id": "JOePvSWQvlqh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a362bc9e-fda7-43f8-c80c-65afcdda894d"
       },
       "source": [
-        ""
+        "def sqr(a):\n",
+        "  return a*a\n",
+        "l=[1,2,3,4,5]\n",
+        "l=list(map(sqr,l))  \n",
+        "print(l)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
