--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNix/A49jQb4ePZxr7uNykf",
+      "authorship_tag": "ABX9TyNvQS9W36AcGAm8Ct8eTqsX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1136,7 +1136,7 @@
         "if keyy in dicc.keys():\n",
         "  print(\"ss\")\n",
         "else:\n",
-        "  print(\"no\")  \n"
+        "  print(\"no\")  "
       ],
       "execution_count": 56,
       "outputs": [
@@ -1166,23 +1166,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4475581d-3448-4681-f317-3ed0e344b58d"
+        "outputId": "efdf0c1a-c2ba-4fc0-a340-b89ddf9e3bc5"
       },
       "source": [
         "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
         "keyy=int(input(\"enter the new key\"))\n",
         "valuee=int(input(\"enter the new value\"))\n",
         "dicc[keyy]=valuee\n",
-        "print(dicc)\n"
+        "print(dicc)"
       ],
-      "execution_count": 59,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the new key55\n",
-            "enter the new value555\n",
-            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 55: 555}\n"
+            "enter the new key2\n",
+            "enter the new value888\n",
+            "{1: 1, 2: 888, 3: 9, 4: 16, 5: 25}\n"
           ],
           "name": "stdout"
         }
@@ -1347,13 +1347,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wyr7izF8vJm-"
+        "id": "wyr7izF8vJm-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "97f8f42c-d4d3-4414-bfe3-676c1e2a5cc2"
       },
       "source": [
-        ""
+        "l=[2,3,4,5]\n",
+        "print(l)\n",
+        "l.append(444)\n",
+        "print(l)\n",
+        "l.insert(3,555)\n",
+        "print(l)\n",
+        "ll=l[::-1]\n",
+        "print(ll)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 4, 5]\n",
+            "[2, 3, 4, 5, 444]\n",
+            "[2, 3, 4, 555, 5, 444]\n",
+            "[444, 5, 555, 4, 3, 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1367,13 +1389,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bgEYn-5evNeJ"
+        "id": "bgEYn-5evNeJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9991456c-62bc-4e14-ce13-f423d2d082cc"
       },
       "source": [
-        ""
+        "l1=[[1,4,2],[5,6,8],[10,2,3]]\n",
+        "l2=[[1,2,3],[1,2,3],[1,2,3]]\n",
+        "l=[]\n",
+        "def addd(l1,l2):\n",
+        "  for i in range(len(l1)):\n",
+        "    l.append([])\n",
+        "    for j in range(len(l1)):\n",
+        "      l[i].append(0)\n",
+        "      l[i][j]=l1[i][j]+l1[i][j]\n",
+        "  print(\"addition\",l)\n",
+        "\n",
+        "def trans(l1):\n",
+        "  l=[]\n",
+        "  i=0\n",
+        "  j=0\n",
+        "  for i in range(len(l1)):\n",
+        "    l.append([])\n",
+        "    for j in range(len(l1)):\n",
+        "      l[i].append(0)     \n",
+        "  for i in range(len(l1)):  \n",
+        "    for j in range(len(l1)): \n",
+        "      l[j][i]=l1[i][j]   \n",
+        "  print(\"transpose\",l)\n",
+        "\n",
+        "def mull(l1,l2):\n",
+        "  l=[]\n",
+        "  for i in range(len(l1)):\n",
+        "    l.append([])\n",
+        "    for j in range(len(l1)):\n",
+        "      l[i].append(0)\n",
+        "  for i in range(len(l1)):\n",
+        "    for j in range(len(l2)):\n",
+        "      for k in range(len(l1)):\n",
+        "        l[i][j]+=l1[i][k]*l2[k][j]     \n",
+        "  print(\"multiplication\",l)  \n",
+        "\n",
+        "addd(l1,l2)\n",
+        "mull(l1,l2)\n",
+        "trans(l1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "addition [[2, 8, 4], [10, 12, 16], [20, 4, 6]]\n",
+            "multiplication [[7, 14, 21], [19, 38, 57], [15, 30, 45]]\n",
+            "transpose [[1, 5, 10], [4, 6, 2], [2, 8, 3]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
