--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvQS9W36AcGAm8Ct8eTqsX",
+      "authorship_tag": "ABX9TyOQtXiPHhM/MJ0IfTY3TQ0F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "pw_k6UOkrAsV"
+      },
+      "source": [
+        "#######################################################################################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "4P7L6Slq__a_"
       },
       "source": [
@@ -90,7 +99,7 @@
         "else:\n",
         "  print(\"Wrong entry ! please enter o or 1 only\")    "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,6 +273,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "WApLLQUGrMnQ"
+      },
+      "source": [
+        "#######################################################################################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NIaadIbyJBEU"
       },
       "source": [
@@ -426,6 +444,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "KNNwfXK9rOEx"
+      },
+      "source": [
+        "#######################################################################################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "N6joplE6xsmi"
       },
       "source": [
@@ -543,6 +570,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u_W4CiGnrPvA"
+      },
+      "source": [
+        "#######################################################################################################"
       ]
     },
     {
@@ -675,6 +711,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A84vmL9zrRE7"
+      },
+      "source": [
+        "#######################################################################################################"
       ]
     },
     {
@@ -820,6 +865,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "U3Otfl8IrS5A"
+      },
+      "source": [
+        "#######################################################################################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "k-5h2B9CsdXq"
       },
       "source": [
@@ -860,7 +914,7 @@
         "print()  \n",
         "print(conc)\n"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +984,7 @@
         "    l.append((temp,count))    \n",
         "print(l)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -939,6 +993,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TKYSqo68rUjM"
+      },
+      "source": [
+        "#######################################################################################################"
       ]
     },
     {
@@ -975,7 +1038,7 @@
         "result = len(list(filter(lambda x: x,list(map(is_vow,list(strn))))))\n",
         "print(result)\n"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1013,7 +1076,7 @@
         "    s.add(i)\n",
         "print(s)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,7 +1118,7 @@
         "l=sorted(l,key=noOfVowels)\n",
         "print(l)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,6 +1127,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f9qXwu60rWDz"
+      },
+      "source": [
+        "#######################################################################################################"
       ]
     },
     {
@@ -1100,7 +1172,7 @@
         "  dicc[i]=i*i\n",
         "print(dicc)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1136,9 +1208,9 @@
         "if keyy in dicc.keys():\n",
         "  print(\"ss\")\n",
         "else:\n",
-        "  print(\"no\")  "
+        "  print(\"no\")  \n"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,23 +1238,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "efdf0c1a-c2ba-4fc0-a340-b89ddf9e3bc5"
+        "outputId": "4475581d-3448-4681-f317-3ed0e344b58d"
       },
       "source": [
         "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
         "keyy=int(input(\"enter the new key\"))\n",
         "valuee=int(input(\"enter the new value\"))\n",
         "dicc[keyy]=valuee\n",
-        "print(dicc)"
+        "print(dicc)\n"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the new key2\n",
-            "enter the new value888\n",
-            "{1: 1, 2: 888, 3: 9, 4: 16, 5: 25}\n"
+            "enter the new key55\n",
+            "enter the new value555\n",
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 55: 555}\n"
           ],
           "name": "stdout"
         }
@@ -1211,7 +1283,7 @@
         "print(sum(dicc.keys()))\n",
         "print(sum(dicc.values()))"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,6 +1293,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "weJaQGXIrZML"
+      },
+      "source": [
+        "#######################################################################################################"
       ]
     },
     {
@@ -1277,6 +1358,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "2qJ9l-d4rasN"
+      },
+      "source": [
+        "#######################################################################################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8gOm8gnUutQ0"
       },
       "source": [
@@ -1329,6 +1419,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "PDSsq9fLrcT-"
+      },
+      "source": [
+        "#######################################################################################################"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Zr_CXS2mvDJC"
       },
       "source": [
@@ -1361,9 +1460,10 @@
         "l.insert(3,555)\n",
         "print(l)\n",
         "ll=l[::-1]\n",
-        "print(ll)"
+        "print(ll)\n",
+        "\n"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1393,9 +1493,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9991456c-62bc-4e14-ce13-f423d2d082cc"
+        "outputId": "89dd79a0-6544-4fd7-f9c0-9ca6907b5e70"
       },
       "source": [
+        "\n",
         "l1=[[1,4,2],[5,6,8],[10,2,3]]\n",
         "l2=[[1,2,3],[1,2,3],[1,2,3]]\n",
         "l=[]\n",
@@ -1436,7 +1537,7 @@
         "mull(l1,l2)\n",
         "trans(l1)"
       ],
-      "execution_count": 112,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -1447,6 +1548,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q3QJTdwRrdwk"
+      },
+      "source": [
+        "#######################################################################################################"
       ]
     },
     {
@@ -1500,25 +1610,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_aylnKz6vlVL",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9a8faac3-a697-436d-cc13-d016ffe9424c"
+        "id": "_aylnKz6vlVL"
       },
       "source": [
         ""
       ],
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['d', 'd', 'd']\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1545,7 +1643,7 @@
         "l=list(map(sqr,l))  \n",
         "print(l)\n"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
