--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQtXiPHhM/MJ0IfTY3TQ0F",
+      "authorship_tag": "ABX9TyMzlwbs2/iPSQueatqN5GIZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1200,22 +1200,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "60bcd0a4-6961-43e0-e951-37ae0c89f59b"
+        "outputId": "02e9bdfb-cf88-464e-9d3d-6f2df9b13cd6"
       },
       "source": [
         "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
-        "keyy=int(input(\"enter the value of key\"))\n",
+        "keyy=int(input(\"enter the value of key    \"))\n",
         "if keyy in dicc.keys():\n",
         "  print(\"ss\")\n",
         "else:\n",
         "  print(\"no\")  \n"
       ],
-      "execution_count": null,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the value of key8\n",
+            "enter the value of key    8\n",
             "no\n"
           ],
           "name": "stdout"
@@ -1238,23 +1238,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4475581d-3448-4681-f317-3ed0e344b58d"
+        "outputId": "dff3f3bb-e38c-40fc-f2ca-7aa192447a61"
       },
       "source": [
         "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
-        "keyy=int(input(\"enter the new key\"))\n",
-        "valuee=int(input(\"enter the new value\"))\n",
+        "keyy=int(input(\"enter the new key    \"))\n",
+        "valuee=int(input(\"enter the new value   \"))\n",
         "dicc[keyy]=valuee\n",
         "print(dicc)\n"
       ],
-      "execution_count": null,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the new key55\n",
-            "enter the new value555\n",
-            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 55: 555}\n"
+            "enter the new key    55\n",
+            "enter the new value   5555\n",
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 55: 5555}\n"
           ],
           "name": "stdout"
         }
@@ -1387,13 +1387,47 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5jz_XPn2uzl8"
+        "id": "5jz_XPn2uzl8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6e35c12e-613b-4880-e375-808b6ff295b4"
       },
       "source": [
-        ""
+        "class Person:\n",
+        "  def __init__(self, name, age,weight,height):\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "    self.weight=weight\n",
+        "    self.height=height\n",
+        "  def get_bmi_result(self):\n",
+        "    BMI=self.weight/(self.height*self.height)    \n",
+        "    if BMI>25:\n",
+        "      print(\"obese\")\n",
+        "    elif BMI>18.5:\n",
+        "      print(\"healthy\") \n",
+        "    else:\n",
+        "      print(\"underweight\") \n",
+        "     \n",
+        "p1 = Person(\"underweight\", 19,45,1.56)\n",
+        "p2 = Person(\"healthy\", 19,65,1.8)\n",
+        "p3 = Person(\"obese\", 19,65,1.56)\n",
+        "p1.get_bmi_result()\n",
+        "p2.get_bmi_result()\n",
+        "p3.get_bmi_result()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "underweight\n",
+            "healthy\n",
+            "obese\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1408,13 +1442,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZEkZnX8Ru2g9"
+        "id": "ZEkZnX8Ru2g9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e99fdc67-6437-4af3-dc2c-6ea8e626e6d1"
       },
       "source": [
-        ""
+        "class Circle:\n",
+        "  def __init__(self,radius):\n",
+        "    self.radius =radius\n",
+        "    \n",
+        "  def area(self):\n",
+        "    print(\"Area of the given circle of radius  \",self.radius,\"  :\",3.14*self.radius*self.radius)\n",
+        "\n",
+        "  def perimeter(self):\n",
+        "    print(\"Perimeter of the given circle of radius  \",self.radius,\"  :\",2*3.14*self.radius)   \n",
+        "c1=Circle(5)\n",
+        "c1.area()   \n",
+        "c1.perimeter()  \n",
+        "\n",
+        "c2=Circle(15)\n",
+        "c2.area()   \n",
+        "c2.perimeter()  \n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Area of the given circle of radius   5   : 78.5\n",
+            "Perimeter of the given circle of radius   5   : 31.400000000000002\n",
+            "Area of the given circle of radius   15   : 706.5\n",
+            "Perimeter of the given circle of radius   15   : 94.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
