--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzlwbs2/iPSQueatqN5GIZ",
+      "authorship_tag": "ABX9TyMCRDM9UddvSmXePWONl+PL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1210,7 +1210,7 @@
         "else:\n",
         "  print(\"no\")  \n"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1247,7 +1247,7 @@
         "dicc[keyy]=valuee\n",
         "print(dicc)\n"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,7 +1330,22 @@
         "id": "Sm124eeuumsL"
       },
       "source": [
-        ""
+        "f=open(\"a.txt\",\"r\")\n",
+        "lines=f.readlines()\n",
+        "l=[]\n",
+        "lll=[]\n",
+        "for line in lines:\n",
+        "    ll=line.split(\" \")\n",
+        "    for i in ll:\n",
+        "        l.append(i)\n",
+        "l.sort()\n",
+        "for i in l:\n",
+        "    lll.append(i.lower())    \n",
+        "print(lll)\n",
+        "f1=open(\"b.txt\",\"w\")\n",
+        "s=\" \"\n",
+        "s=\" \".join(lll)\n",
+        "f1.write(s)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1350,7 +1365,30 @@
         "id": "l0Loe6OGusNL"
       },
       "source": [
-        ""
+        "f=open(\"a.txt\",\"r\")\n",
+        "lines=f.readlines()\n",
+        "l=[]\n",
+        "for line in lines:\n",
+        "    ll=line.split(\" \")\n",
+        "    for i in ll:\n",
+        "        l.append(i)\n",
+        "temp=[]\n",
+        "l.sort()\n",
+        "print(l)\n",
+        "count=1\n",
+        "requiredWord=\"\"\n",
+        "highestCount=1\n",
+        "for i in l:\n",
+        "    if i in temp:\n",
+        "        count+=1\n",
+        "        if(count>highestCount):\n",
+        "            highestCount=count\n",
+        "            print(highestCount)\n",
+        "            requiredWord=i\n",
+        "    else:\n",
+        "        temp.append(i)\n",
+        "        count=1\n",
+        "print(requiredWord,\" ==>repeated for \",highestCount,\" times\")        "
       ],
       "execution_count": null,
       "outputs": []
@@ -1416,7 +1454,7 @@
         "p2.get_bmi_result()\n",
         "p3.get_bmi_result()"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1466,7 +1504,7 @@
         "c2.area()   \n",
         "c2.perimeter()  \n"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1524,8 +1562,7 @@
         "l.insert(3,555)\n",
         "print(l)\n",
         "ll=l[::-1]\n",
-        "print(ll)\n",
-        "\n"
+        "print(ll)"
       ],
       "execution_count": null,
       "outputs": [
@@ -1560,7 +1597,6 @@
         "outputId": "89dd79a0-6544-4fd7-f9c0-9ca6907b5e70"
       },
       "source": [
-        "\n",
         "l1=[[1,4,2],[5,6,8],[10,2,3]]\n",
         "l2=[[1,2,3],[1,2,3],[1,2,3]]\n",
         "l=[]\n",
@@ -1601,7 +1637,7 @@
         "mull(l1,l2)\n",
         "trans(l1)"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
