--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCRDM9UddvSmXePWONl+PL",
+      "authorship_tag": "ABX9TyM9WWLMuYRdYALseCLiOaj0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1330,6 +1330,15 @@
         "id": "Sm124eeuumsL"
       },
       "source": [
+        "# this code is not for collab or jupyter notebook\n",
+        "# to execute this code ,follow the given steps\n",
+        "\n",
+        "# step1: create a directory \n",
+        "# step2: create python file in that directory\n",
+        "# step3:create 2 text files named \"a.txt\" and \"b.txt\" in the same directory\n",
+        "# step4:fill the \"a.txt\" will some sample lines\n",
+        "# step5:run the python file\n",
+        "\n",
         "f=open(\"a.txt\",\"r\")\n",
         "lines=f.readlines()\n",
         "l=[]\n",
@@ -1365,6 +1374,18 @@
         "id": "l0Loe6OGusNL"
       },
       "source": [
+        "# this code is not for collab or jupyter notebook\n",
+        "# this code is to run in the local machines\n",
+        "\n",
+        "# to execute this code ,follow the given steps\n",
+        "\n",
+        "# step1: create a directory \n",
+        "# step2: create python file in that directory\n",
+        "# step3:create 1 text files named \"a.txt\"  in the same directory\n",
+        "# step4:fill the \"a.txt\" will some sample lines\n",
+        "# step5:run the python file\n",
+        "\n",
+        "\n",
         "f=open(\"a.txt\",\"r\")\n",
         "lines=f.readlines()\n",
         "l=[]\n",
